--- a/assets/default.css
+++ b/assets/default.css
@@ -4,10 +4,55 @@
 body {
 	margin: 0;
 	overflow: hidden;
-	background: #000;
+	background: #f0f0f0;
+	font-family: 'Open Sans', sans-serif;
 }
-
-#container {
+.container {
 	width: 100%;
 	height: 100%;
+}
+.sidebar {
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 250px;
+	height: 100%;
+}
+
+/* Sidebar
+********************************/
+
+.sidebar {
+	box-sizing: border-box;
+	background: #e0e0e0;
+	border-left: 1px solid #ccc;
+	padding: 7px 10px 10px 10px;
+}
+.sidebar h1, h2, h3 {
+	font-weight: 300;
+}
+.sidebar h1 {
+	font-size: 2em;
+	margin: 0;
+}
+.sidebar h2 {
+	margin: 10px 0;
+}
+.sidebar ul {
+	padding-left: 10px;
+	margin: 0;
+	list-style: none;
+}
+.sidebar .subtitle {
+	font-style: italic;
+	font-weight: 300;
+	margin: 0;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 10px;
+  font-style: italic;
+  font-weight: 300;
 }
